# autoplank

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  cli.yml
.circleci/: config.yml
.circleci/deploy/: deploy.js  package-lock.json  package.json
.github/: dependabot.yml
src/: cerbere.rs  dependencies.rs  main.rs  monitor.rs  mouse_location.rs  plank.rs
src/actions/: elementary.rs  mod.rs  rescan.rs
src/threads/: autoplank.rs  mod.rs  socket.rs
