[package]
name = "autoplank"
version = "0.2.0"
authors = ["Edwin Svensson <autoplankrs@olback.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2"
clap = { version = "2", features = ["yaml"] }
regex = "1.3"
sysinfo = "0.14"
nix = "0.17"
padlock = "0.1.1-alpha"
